--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,11 +6,8 @@
 	color: #fff;
 	display: flex;
 	background-color: #14213d;
-	// height: 100vh;
-	// justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	// height: calc(100vh - 100px);
 	height: 100vh;
 
 	.container {
@@ -30,8 +27,8 @@
 				// font-size: 1.5rem;
 				// height: 100%;
 				width: 100%;
-				height: calc(100% - 100px);
-				overflow-x: scroll;
+				height: 100%;
+				overflow-y: scroll;
 			}
 		}
 
@@ -40,7 +37,7 @@
 				padding: 0 15px;
 				color: #000;
 				background-color: #fff;
-				overflow-x: scroll;
+				overflow-y: scroll;
 
 				img {
 					width: 100px;
@@ -60,6 +57,27 @@
 		#preview-area {
 			// max-width: 50%;
 			height: calc(100% - 100px);
+
+			pre {
+				padding: 10px;
+			}
+
+			code {
+				// text-align: center;
+				vertical-align: middle;
+				padding: 2px 6px;
+			}
+
+			pre,
+			code {
+				color: white;
+				background: #14213d;
+				border-radius: 5px;
+			}
+
+			pre code {
+				padding: 0;
+			}
 		}
 	}
 }
