Renames preview-area to preview for the preview component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -33,7 +33,7 @@
 		}
 
 		#Preview {
-			#preview-area {
+			#preview {
 				padding: 0 15px;
 				color: #000;
 				background-color: #fff;
@@ -54,7 +54,7 @@
 		}
 
 		// #editor,
-		#preview-area {
+		#preview {
 			// max-width: 50%;
 			height: calc(100% - 100px);
 
