--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,11 +1,15 @@
-* {
+@import 'https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap';
+
+ * {
 	box-sizing: border-box;
 }
 
 .App {
+	font-family: 'Lexend', sans-serif;
 	color: #fff;
 	display: flex;
-	background-color: #14213d;
+	// background-color: #14213d;
+	background-image: linear-gradient(135deg, #fccf31 10%, #f55555 100%);
 	align-items: center;
 	flex-direction: column;
 	height: 100vh;
